--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -20,6 +20,16 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
+    - name: Cache Gradle
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}-${{ github.run_id }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
     - name: Grant execute permission to gradlew
       run: chmod +x gradlew
 
