--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -23,5 +23,15 @@ jobs:
     - name: Grant execute permission to gradlew
       run: chmod +x gradlew
 
+    - name: Cache Gradle
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}-${{ github.run_id }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+
     - name: Run API Tests
       run: ./gradlew clean test --tests * --info -Dcucumber.filter.tags="@api"
